# revkit

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
examples/: build_instructions.md  challenge.c
src/revkit/: __init__.py  analyzers.py  cli.py  disasm.py  patcher.py  patterns.py  utils.py
tests/: test_basic.py
