[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revkit"
version = "0.1.0"
description = "Educational reverse engineering toolkit"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lief==0.14.1",
  "capstone>=5.0,<6",
  "rich>=13.7"
]

[project.scripts]
revkit = "revkit.cli:main"
